# app/Http/Controllers/Api/AuthController.php
@@ -4,106 +4,17 @@ namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
 
-/**
- * Undocumented function
- *
- * @param LoginRequest $request
- * @return JsonResponse
- */
 
 use App\Http\Requests\Api\Auth\{RegisterRequest, LoginRequest};
-use App\Models\User;
+
 use App\Services\API\AuthServices;
 use Illuminate\Http\JsonResponse;
-use Illuminate\Http\Request;
-
+use App\Traits\Http\Controllers\Api\SwaggerAuth;
 
 class AuthController extends Controller
 {
-    /**
-     * Register
-     * @OA\Post (
-     *     path="/api/auth/register",
-     *     tags={"Authenticate"},
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema(
-     *                 @OA\Property(
-     *                      type="object",
-     *                      @OA\Property(
-     *                          property="name",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="email",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="password",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="password_confirmation",
-     *                          type="string"
-     *                      ),
-     *                 ),
-     *                 example={
-     *                     "name":"John Snow",
-     *                     "email":"john@test.com",
-     *                     "password":"johnjohn1",
-     *                     "password_confirmation":"johnjohn1",
-     *                }
-     *             )
-     *         )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Success",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="meta", type="object",
-     *                  @OA\Property(property="code", type="number", example=200),
-     *                  @OA\Property(property="status", type="string", example="success"),
-     *                  @OA\Property(property="message", type="string", example=null),
-     *              ),
-     *              @OA\Property(property="data", type="object",
-     *                  @OA\Property(property="user", type="object",
-     *                      @OA\Property(property="id", type="number", example=1),
-     *                      @OA\Property(property="name", type="string", example="John Snow"),
-     *                      @OA\Property(property="email", type="string", example="john@test.com"),
-     *                      @OA\Property(property="email_verified_at", type="string", example=null),
-     *                      @OA\Property(property="updated_at", type="string", example="2022-06-28 06:06:17"),
-     *                      @OA\Property(property="created_at", type="string", example="2022-06-28 06:06:17"),
-     *                  ),
-     *                  @OA\Property(property="access_token", type="object",
-     *                      @OA\Property(property="token", type="string", example="randomtokenasfhajskfhajf398rureuuhfdshk"),
-     *                      @OA\Property(property="type", type="string", example="Bearer"),
-     *                  ),
-     *              ),
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=422,
-     *          description="Validation error",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="meta", type="object",
-     *                  @OA\Property(property="code", type="number", example=422),
-     *                  @OA\Property(property="status", type="string", example="error"),
-     *                  @OA\Property(property="message", type="string", example="Validation errors"),
-     *                  @OA\Property(property="data", type="object",
-     *                      @OA\Property(property="email", type="array", collectionFormat="multi",
-     *                        @OA\Items(
-     *                          type="string",
-     *                          example="The email has already been taken.",
-     *                          )
-     *                      ),
-     *                  ),
-     *              ),
-     *              @OA\Property(property="data", type="object", example={}),
-     *          )
-     *      )
-     * )
-     */
+    use SwaggerAuth;
+
     public function register(RegisterRequest $request): JsonResponse
     {
 
